Fixed z-index in full screen mode that prevented tooltips from displaying (#49)

--- a/assets/css/caresetreportengine.report.css
+++ b/assets/css/caresetreportengine.report.css
@@ -197,7 +197,6 @@ text.node-label
 
 .full_screen {
     display: block;
-    z-index: 9999;
     position: fixed;
     width: 100% !important;
     height: 100% !important;
